--- a/index.html
+++ b/index.html
@@ -105,12 +105,14 @@
                 <div class="col-lg-7">
                     <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Su di me</h6>
                     <h1 class="display-4 mb-3"><span class="text-primary">12+ Anni di esperienza</span> Servizi di consulenza</h1>
-                    <p>Da più di 12 anni ho lavorato nel settore relazionale con la gente, mettendo in pratica la mia passione per il
-                         servizio e la comprensione delle esigenze delle persone. Sono orgogliosamente un ragazzo Sardo, 
-                         radicato nella nostra comunità e impegnato nel suo benessere. La mia missione è quella di aiutare 
-                         tutte le persone che risiedono in Sardegna e non a risparmiare denaro sulle bollette energetiche. Posso offrire conoscenze 
-                         approfondite e soluzioni personalizzate per migliorare l'efficienza energetica e ridurre i costi. Tutto in maniera gratuita
-                        </p>
+                    <p>
+                        <b>Da più di 12 anni ho lavorato nel settore relazionale con la gente, mettendo in pratica la mia passione per il
+                            servizio e la comprensione delle esigenze delle persone. Sono orgogliosamente un ragazzo Sardo, 
+                            radicato nella nostra comunità e impegnato nel suo benessere. La mia missione è quella di aiutare 
+                            tutte le persone che risiedono in Sardegna e non a risparmiare denaro sulle bollette energetiche. Posso offrire conoscenze 
+                            approfondite e soluzioni personalizzate per migliorare l'efficienza energetica e ridurre i costi. Tutto in maniera gratuita.
+                        </b>
+                    </p>
                 </div>
             </div>
         </div>
@@ -204,13 +206,16 @@
                             <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4">
                                 <h5 class="mb-2">Gianluca Idili</h5>
                                 <p class="text-muted font-italic mb-2">Chi è?</p>
-                                <p>Sono un normalissimo ragazzo Sardo che ha fatto della sua passione un Lavoro.
+                                <p>
+                                    <b>
+                                        Sono un normalissimo ragazzo Sardo che ha fatto della sua passione un Lavoro.
                                     La mia passione è aiutare le persone a gestire al meglio le proprie finanze attraverso consulenze 
                                     personalizzate e gratuite. Ascolto attentamente le esigenze di ogni individuo e fornisco consigli 
                                     mirati per ottimizzare le spese e massimizzare il risparmio. Non sono un esperto finanziario, 
                                     ma offro il mio supporto e la mia esperienza personale per aiutare gli altri a prendere decisioni informate. 
                                     Mi impegno a rispondere a tutte le domande e a fornire assistenza personalizzata io stesso di persona,
                                     indipendentemente dalla situazione finanziaria. Sono qui per aiutare nel miglior modo possibile.
+                                    </b>
                                 </p>
                             </div>
                         </div>
@@ -267,7 +272,7 @@
                 <div class="col-lg-8">
                     <div class="owl-carousel testimonial-carousel">
                         <div class="text-center">
-                            <img class="img-fluid mx-auto mb-3" src="img/cliente2.jpg" style="width: 100px;">
+                            <img class="img-fluid mx-auto mb-3" src="img/cliente2.jpg" style="width: 110px; height: 100px;">
                             <p style="font-size: 22px;" class="px-2">Gianluca è stato molto cortese e paziente nello spiegarmi accuratamente 
                                 come fare ad avere un preventivo gratuito per l'impianto del Gas,
                             mi ha addirittura consigliato di rimanere con il mio attuale fornitore di energia per risparmiare! E' un ragazzo molto onesto!</p>
@@ -283,7 +288,7 @@
                             <span>Autista</span>
                         </div>
                         <div class="text-center">
-                            <img class="img-fluid mx-auto mb-3" src="img/cliente3.jpg" style="width: 100px;">
+                            <img class="img-fluid mx-auto mb-3" src="img/cliente3.jpg" style="width: 100px; height: 100px;">
                             <p style="font-size: 22px;" class="px-2">Grazie a Gianluca, ho ottenuto un preventivo gratuito per l'impianto di 
                                 gas metano nella mia casa. La sua assistenza è stata preziosa e 
                                 mi ha permesso di risparmiare tempo e denaro. Non esiterei a raccomandare i suoi servizi a chiunque!</p>
