leggere migliorie di spazio

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
             <div class="navbar-nav ml-auto py-0">
                 <a href="#home" class="nav-item nav-link active">Home</a>
-                <a href="#about" class="nav-item nav-link">About</a>
-                <a href="#service" class="nav-item nav-link">Service</a>
+                <a href="#about" class="nav-item nav-link">Su di me</a>
+                <a href="#service" class="nav-item nav-link">Servizi</a>
             </div>
             <a href="index.html" class="navbar-brand bg-primary px-4 mx-3 d-none d-lg-block">
                 <h1 class="display-4 text-white text-uppercase m-0">Gianluca</h1>
             </a>
             <div class="navbar-nav mr-auto py-0">
-                <a href="#team" class="nav-item nav-link">Team</a>
-                <a href="#faqs" class="nav-item nav-link">FAQs</a>
-                <a href="#testimonial" class="nav-item nav-link">Testimonial</a>
+                <a href="#team" class="nav-item nav-link">Chi sono</a>
+                <a href="#faqs" class="nav-item nav-link">Cosa devi sapere</a>
+                <a href="#testimonial" class="nav-item nav-link">Testimonianze</a>
             </div>
         </div>
     </nav>
@@ -332,7 +332,7 @@
                 <div class="row mb-5 p-4" style="background: rgba(256, 256, 256, .05);">
                     <div class="col-md-4">
                         <div class="text-md-center">
-                            <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">whatsapp</h5>
+                            <h5 class="text-primary text-uppercase mb-2 mt-2" style="letter-spacing: 5px;">whatsapp</h5>
                             <a class="btn btn-outline-primary border-white rounded-circle btn-square mr-1 mb-4 m-md-0 text-white" href="https://wa.me/393349830566"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
@@ -347,7 +347,7 @@
                         <div class="text-md-center">
                             <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Chiamami</h5>
                             <a href="tel:+393349830566">
-                                <p class="mb-4 m-md-0 text-white">+39 334 98 30 566</p>
+                                <p class="mb-2 m-md-0 text-white">+39 334 98 30 566</p>
                              </a>
                         </div>
                     </div>
