risolto bug grafico

--- a/index.html
+++ b/index.html
@@ -329,11 +329,17 @@
     <div class="container-fluid bg-dark text-white py-5 px-sm-3 px-lg-5" style="margin-top: 90px;" id="contact">
         <div class="row pt-5">
             <div class="col-12 mb-4 px-4">
-                <div class="row mb-5 p-4" style="background: rgba(256, 256, 256, .05);">
+                <div class="row mb-5 p-4 align-items-center" style="background: rgba(256, 256, 256, .05);">
                     <div class="col-md-4">
                         <div class="text-md-center">
-                            <h5 class="text-primary text-uppercase mb-2 mt-2" style="letter-spacing: 5px;">whatsapp</h5>
-                            <a class="btn btn-outline-primary border-white rounded-circle btn-square mr-1 mb-4 m-md-0 text-white" href="https://wa.me/393349830566"><i class="fab fa-whatsapp"></i></a>
+                            <h5 class="text-primary text-uppercase mb-2 mt-4" style="letter-spacing: 5px;">whatsapp</h5>
+                              <a class="btn  mr-1 mb-4 m-md-0 text-white" 
+                                href="https://wa.me/393349830566">
+                                <div style="display: flex; align-items: center; font-size: 1.3rem;">
+                                    <i class="fab fa-whatsapp"></i>
+                                    <span class="mx-3">Scrivimi </span>
+                                </div>
+                            </a> 
                         </div>
                     </div>
                     <div class="col-md-4">
