aggiunto href corretto

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         </div>
     </div>
     <div class="container-fluid bg-dark text-white text-center border-top py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .05) !important;">
-        <p class="m-0 text-white">&copy; <a href="#">gianlucaidili.com</a>. All Rights Reserved. Designed by <a href="https://pixelpro.cloud">PixelPro.cloud</a></p>
+        <p class="m-0 text-white">&copy; <a href="https://gianluca-idili.netlify.app/">gianlucaidili.com</a>. All Rights Reserved. Designed by <a href="https://pixelpro.cloud">PixelPro.cloud</a></p>
     </div>
     <!-- Footer End -->
 
